[package]
name = "pfviz"
version = "0.1.0"
description = "Visualization tool for page faults"
authors = ["Daniel Bittman <danielbittman1@gmail.com>"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.29.0"
color-eyre = "0.6.3"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
sscanf = "0.4.3"
string-intern = "0.1.7"
string-interner = "0.19.0"
