[package]
name = "pfviz"
version = "0.1.0"
description = "Visualization tool for page faults"
authors = ["Daniel Bittman <danielbittman1@gmail.com>"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.29.0"
color-eyre = "0.6.3"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
sscanf = "0.4.3"
string-intern = "0.1.7"
string-interner = "0.19.0"
smallvec = "1.14.0"
humansize = "2.1.3"
stable-vec = "0.4.1"
itertools = "0.14.0"
interval_tree = "0.2.0"
nonoverlapping_interval_tree = "0.1.5"
